<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/frame"
    android:layout_height="wrap_content"
    >

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="45dp"
        android:layout_alignParentEnd="true"
        android:text="@string/hanoi"
        android:textColor="@color/text"
        android:textSize="@dimen/size_text_20" />

    <TextView
        android:id="@+id/text_forecast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cloudy"
        android:textColor="@color/text"
        android:textSize="@dimen/size_text_24"
        android:layout_alignTop="@+id/textView"
        android:layout_alignBottom="@+id/textView"
        android:layout_marginTop="-16dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="-16dp"
        android:layout_toStartOf="@+id/textView"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:contentDescription="@string/weather_image"
        android:layout_centerInParent="true"
        android:src="@drawable/weather"
        app:tint="#01579B" />

</RelativeLayout>