<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="fragment.ForecastFragment">
<TextView
    android:id="@+id/text_day"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#315691"
    android:gravity="center"
    android:text="@string/thursday"
    android:textColor="@color/black"
    android:textStyle="bold"
    android:textSize="50sp"
    android:layout_weight="1"
    tools:ignore="TextContrastCheck"/>

    <ImageView
        android:id="@+id/ImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:contentDescription="TODO"
        android:src="@drawable/weather"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/padding_bottom_32"
        tools:ignore="UselessParent">
        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/wednesday"
            android:textColor="#3A3939"
            android:textSize="16sp"
            android:textStyle="bold" />
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/margin_end_48"
            android:layout_weight="1"
            android:contentDescription="@string/weather"
            android:src="@drawable/snowy"
            app:tint="#c90e0e" />
        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/snowy"
            android:textColor="#3A3939"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/padding_bottom_32"
        tools:ignore="UselessParent">
        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/thursday"
            android:textColor="#3A3939"
            android:textSize="16sp"
            android:textStyle="bold" />
        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/margin_end_48"
            android:layout_weight="1"
            android:contentDescription="@string/windy"
            android:src="@drawable/windy"
            app:tint="#c90e0e" />
        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/windy"
            android:textColor="#3A3939"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/padding_bottom_32"
        tools:ignore="UselessParent">
        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/friday"
            android:textColor="#3A3939"
            android:textSize="16sp"
            android:textStyle="bold" />
        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/margin_end_48"
            android:layout_weight="1"
            android:contentDescription="@string/weather"
            android:src="@drawable/weather"
            app:tint="#c90e0e" />
        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cloudy"
            android:textColor="#3A3939"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/padding_bottom_32"
        tools:ignore="UselessParent">
        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/saturday"
            android:textColor="#3A3939"
            android:textSize="16sp"
            android:textStyle="bold" />
        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/margin_end_48"
            android:layout_weight="1"
            android:contentDescription="@string/weather"
            android:src="@drawable/snowy"
            app:tint="#c90e0e" />
        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/snowy"
            android:textColor="#3A3939"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/padding_bottom_32"
        tools:ignore="UselessParent">
        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sunday"
            android:textColor="#3A3939"
            android:textSize="16sp"
            android:textStyle="bold" />
        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/margin_end_48"
            android:layout_weight="1"
            android:contentDescription="@string/weather"
            android:src="@drawable/rainy"
            app:tint="#c90e0e" />
        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rainy"
            android:textColor="#3A3939"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/padding_bottom_32"
        tools:ignore="UselessParent">
        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/monday"
            android:textColor="#3A3939"
            android:textSize="16sp"
            android:textStyle="bold" />
        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/margin_end_48"
            android:layout_weight="1"
            android:contentDescription="@string/weather"
            android:src="@drawable/cloudy"
            app:tint="#c90e0e" />
        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cloudy"
            android:textColor="#3A3939"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/padding_bottom_32"
        tools:ignore="UselessParent">
        <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tuesday"
            android:textColor="#3A3939"
            android:textSize="16sp"
            android:textStyle="bold" />
        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/margin_end_48"
            android:layout_weight="1"
            android:contentDescription="@string/weather"
            android:src="@drawable/sunny"
            app:tint="#c90e0e" />
        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sunny"
            android:textColor="#3A3939"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="64dp"
        tools:ignore="UselessParent">
        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/wednesday"
            android:textColor="#3A3939"
            android:textSize="16sp"
            android:textStyle="bold" />
        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/margin_end_48"
            android:layout_weight="1"
            android:contentDescription="@string/weather"
            android:src="@drawable/thunder"
            app:tint="#c90e0e" />
        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/thunder"
            android:textColor="#3A3939"
            android:textSize="16sp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

</LinearLayout>
